fix: timeout SPEED is too short, cause infinite loop, ref #42, https://github.com/ant-design/ant-design-mobile/issues/785

--- a/assets/index.less
+++ b/assets/index.less
@@ -17,6 +17,7 @@
     height: 12px;
     overflow: hidden;
     display:block;
+    touch-action: none;
 
     &-active {
       background: #ddd;
